# parts_photos

./: .dockerignore  .gitignore  .txt  DRAFT_MODE.md  STUDIO_DEPLOY.md  STUDIO_GROUPS_TARGETS.md  docker-compose.yml
.github/workflows/: deploy.yml
api/: .dockerignore  .env.example  Dockerfile  requirements.txt  run.py
api/app/: config.py  db.py  draft_groups.py  images.py  main.py  minio_client.py  models.py  video.py
api/app/routers/: collages.py  gaps.py  groups.py  owners.py  photos.py  studio.py
api/app/studio/: groups.py  (+4 more)
api/sql/: fdw_smart.sql  fdw_uchet.sql  migration_001_partial_position_index.sql  migration_002_groups_position.sql  migration_003_studio.sql  migration_004_studio_targets.sql  migration_005_photos_for_publication_condition.sql  migration_006_draft_collages.sql  migration_006_library_collages.sql  migration_007_merge_defect_into_real.sql  migration_007_revert_draft.sql  migration_008_merge_publication_channels.sql  migration_009_photos_source_copy.sql  oneoff_008_rebind_new_publication.py
docs/: PHOTO_GAPS.md  instance-collages-spec.md
mocks/: admin.html
studio_core/: pyproject.toml
studio_core/src/studio_core/: __init__.py  codex_runner.py  options.py  prompt_builder.py
studio_core/tests/: test_article_match.py  test_prompt_builder.py
web/: .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/lib/: api.ts  channels.ts  clipboard.ts  download.ts  draftGroups.ts  formatApiError.ts  types.ts
web/public/: manifest.json
web/styles/: tokens.css
(+66 files in other folders)
